# hookspy

./: .gitignore  Makefile  README.md
.github/workflows/: release.yml
backend/: Cargo.toml  hookspy.db-wal
backend/src/: app.rs  config.rs  lib.rs  main.rs  sweeper.rs
backend/src/auth/: google.rs  jwt.rs  mod.rs  oauth2.rs  user.rs
backend/src/dao/: mod.rs  user.rs  webhook.rs
backend/src/handlers/: admin.rs  auth.rs  error.rs  mod.rs  webhook.rs  ws.rs
backend/src/model/: db.rs  mod.rs  stats.rs  user.rs  webhook.rs
backend/src/notification/: notification.rs
backend/src/schema/: webhook.rs
frontend/: Cargo.toml  Trunk.toml  index.html  webhooks.html
frontend/src/: lib.rs  main.rs  routes.rs  style.css
frontend/src/components/: create_webhook_modal.rs  mod.rs  theme_switcher.rs  toast.rs  tooltip.rs  webhook_details.rs  webhook_list.rs  webhook_request.rs  webhook_request_details.rs  webhook_request_list.rs
frontend/src/hooks/: mod.rs  use_clock_tick.rs
frontend/src/pages/: home_page.rs  login_page.rs  mod.rs  webhook_page.rs  webhooks_layout.rs  webhooks_list_page.rs
workflows/: release.yml
