[package]
name = "hookspy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
libsql = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
rust-embed = "8.9.0"
mime_guess = "2.0.5"
clap = { version = "4", features = ["derive"] }
