[package]
name = "hookspy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hookspy"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
libsql = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
rust-embed = "8.9.0"
mime_guess = "2.0.5"
clap = { version = "4", features = ["derive"] }
tracing-subscriber = "0.3.22"
tracing = "0.1.43"
oauth2 = "5.0.0"
reqwest = "0.12.26"
jwt = "0.16.0"
lazy_static = "1.5.0"
hmac = "0.12.1"
sha2 = "0.10.9"
base64 = "0.22.1"
time = "0.3.44"
anyhow = "1.0.100"
