[package]
name = "hookspy-ui"
version = "0.1.0"
edition = "2024"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Navigator",
    "Clipboard",
]

[dependencies]
chrono = "0.4.42"
chrono-humanize = "0.2.3"
gloo-net = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
wasm-bindgen-futures = "0.4.56"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
