[package]
name = "hookspy-ui"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Navigator",
    "Clipboard",
    "Document",
    "Element",
    "DomRect",
    "HtmlElement",
    "Storage",
]

[dependencies]
chrono = "0.4.42"
js-sys = "0.3"
chrono-humanize = "0.2.3"
futures-util = "0.3.31"
gloo-net = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen-futures = "0.4.56"
yew = { version = "0.22.0", features = ["csr"] }
yew-router = "0.19.0"
